--- a/Tasker/Pages/Index.cshtml
+++ b/Tasker/Pages/Index.cshtml
@@ -5,13 +5,15 @@
 
 
 <h1>All Tasks</h1>
-@foreach (Tasker.Task task in Model.Tasks) { 
-    <thead>
-        <tr>
-            <td>task.Id</td>
-            <td>task.Title</td>
-            <td>task.Description</td>
-            <td>task.Priority</td>
-        </tr>
-    </thead>
-} 
+<table>
+    @foreach (Tasker.Task task in Model.Tasks) { 
+            
+                <tr>
+                    <td>task.Id</td>
+                    <td>task.Title</td>
+                    <td>task.Description</td>
+                    <td>task.Priority</td>
+                </tr>
+            
+    } 
+</table>
